--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_url: https://madeline-scyphers.github.io/procyon-wiki # Change this to your
 site_author: Madeline Scyphers
 
 theme:
-    name: null
+    name: 'material'
     logo: favicons.png
     favicon: favicons.png
     custom_dir: overrides
