--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,8 +131,8 @@ extra_css:
     # - assets/css/admonition.css
     # - assets/css/custom_attributes.css
     # - assets/css/customization.css
-    # - assets/css/info_box.css
-    - assets/css/publish.css
+    - assets/css/info_box.css
+    # - assets/css/publish.css
     # - publish.css  # ITS theme
 extra:
   SEO: 'assets/meta/LOGO_SEO.png'
